Feature/backend preentrega (#8)
* Add files via upload

* consolidate backend cleanup and API structure

---------

Co-authored-by: Bautista24-03 <bautistacorrado01@gmail.com>